overflow fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,21 +15,20 @@ body {
 
 .divider {
   height: 3px;
-  width: 300%;
-  margin: 0% -100%;
+  width: 100vw;
   background: linear-gradient(180deg,
       rgba(101, 24, 180, 1),
       rgba(147, 88, 247, 1));
 }
 
-.toggle {
-  display: none;
-}
-
 .big {
-  font-size: 4rem;
+  font-size: 3rem;
   font-weight: 800;
   transition: 0.3s;
+}
+
+.toggle {
+  display: none;
 }
 
 h1,
